--- a/src/main.scss
+++ b/src/main.scss
@@ -29,7 +29,7 @@ h1 {
   justify-content: center;
 }
 
-.movie-catalog {
+.movies-catalog {
   margin: 22px 31px 0 31px;
   font-family: Tahoma;
   font-size: 12px;
