--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,8 +1,10 @@
 .movies-catalog {
   .loader {
     width: 100%;
+    height: 144px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 22px;
   }
 }
